# UDP-flatbuffers

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
DrawWidget/: drawwidget.cpp  drawwidget.h
InfoWidget/: infowidget.cpp  infowidget.h
UdpReceiver/: udpreceiver.cpp  udpreceiver.h
